--- a/admin-ms/src/main/resources/jdbc.properties
+++ b/admin-ms/src/main/resources/jdbc.properties
@@ -1,18 +1,27 @@
 #MySql
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/fui?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
-jdbc.username=root
-jdbc.password=admin
-jdbc.maxActive=10
-mybatis.dbType=mysql
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/fui?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
+#jdbc.username=root
+#jdbc.password=admin
+#mybatis.activiti.dbType=mysql
+#mybatis.dbType=mysql
 #**************************************************************************
 #Oracle
 #jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@192.168.131.128:1521:orcl
 #jdbc.username=fui
 #jdbc.password=admin
-#jdbc.maxActive=10
+#mybatis.activiti.dbType=oracle
 #mybatis.dbType=oracle
 #**************************************************************************
+#SqlServer
+jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+jdbc.url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=fui
+jdbc.username=sa
+jdbc.password=a111111
+mybatis.activiti.dbType=mssql
+mybatis.dbType=sqlserver
+#**************************************************************************
+jdbc.maxActive=10
 mybatis.databaseSchemaUpdate=false
 mybatis.mapperLocation=classpath*:mapper/**/*.xml
