--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,13 @@
             <scope>system</scope>
             <systemPath>${pom.basedir}/admin-ms/src/main/webapp/WEB-INF/lib/ojdbc14-10.2.0.3.0.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>sqljdbc4</groupId>
+            <artifactId>sqljdbc4</artifactId>
+            <version>4.0</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/admin-ms/src/main/webapp/WEB-INF/lib/sqljdbc4-4.0.jar</systemPath>
+        </dependency>
     </dependencies>
     <properties>
         <project.version>1.0</project.version>
